Changed broken Image

--- a/views/partials/image.handlebars
+++ b/views/partials/image.handlebars
@@ -1,7 +1,7 @@
 {{#each partials.imageContext}}
 <div class="grid-item" id={{_id}}>
       
-    <img src ='{{imageAdress}}' caption = 'hello world' onError="this.onerror=null;this.src='images2/404-Hero.png';"/>
+    <img src ='{{imageAdress}}' caption = 'hello world' onError="this.onerror=null;this.src='https://memegenerator.net/instance/72226346';"/>
       <div class="caption back"> <!--  I am using two captions here-->
  
        <h5 style="text-align:center; font-weight:normal; padding:8px">{{description}}</h5>
