--- a/views/partials/imageUser.handlebars
+++ b/views/partials/imageUser.handlebars
@@ -2,7 +2,7 @@
 
 <div class="grid-item" id={{_id}}>
 
-    <img src='{{imageAdress}}' caption='hello world' onError="this.onerror=null;this.src='images2/404-Hero.png';"/>
+    <img src='{{imageAdress}}' caption='hello world' onError="this.onerror=null;this.src='https://memegenerator.net/instance/72226346';"/>
     <div class="caption back">
         <!--  I am using two captions here-->
 
