--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,8 +10,8 @@
     <meta name="author" content="">
     <link rel="icon" href="images2/logo.png">
 
-    <title>Handlebars</title>
-
+    <title>Pinterest for Heroes</title>
+     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap core CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -128,7 +128,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster The public folder is the root folder-->
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+   
     <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="custom/js/ie10-viewport-bug-workaround.js"></script>
