--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -2,7 +2,7 @@
     {{!-- This is a section used inside the current view which will be rendered inside the main layout         Chapter 7  OReilly.Web.Development.With.Node.And.Express--}}
 <div id="navbar" class="navbar-collapse collapse">
     <ul class="nav navbar-nav">
-        <li class="a_ctive"><a href="#">All</a></li>
+        <li class="a_ctive"><a href="/">All</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
         <li>
