Removed multer and changed form types

--- a/views/userHome.handlebars
+++ b/views/userHome.handlebars
@@ -9,7 +9,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Add a Pic <span class="caret"></span></a>
             <ul class="dropdown-menu">
 
-                <form method="POST" enctype="multipart/form-data" action='/'>
+                <form method="POST" action='/'>
                     <div class="form-group">
                         <input type="text" class="form-control" id="url" placeholder="Pic url..." name='imageUrl'>
                     </div>
